[package]
name = "AntiVirus"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "5.0"
tokio = { version = "1.43", features = ["full", "tracing"] }
sha2 = "0.11.0-pre.4"
inotify = "0.10"
mongodb = "3.2.0"
serde = "1.0.217"
serde_json = "1.0.138"
futures = "0.3.31"
bson = "2.13.0"
regex = "1.11.1"
